# TodoTree

./: README.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  Procfile  alembic.ini  app.py  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260505_0001_initial_schema.py  20260506_0002_subscription_and_invitations.py
backend/app/: auth.py  config.py  database.py  main.py  permissions.py
backend/app/models/: __init__.py  personal_task.py  project.py  task.py  user.py
backend/app/routers/: auth.py  invitations.py  personal_tasks.py  projects.py  tasks.py
backend/app/schemas/: personal_task.py  project.py  task.py  user.py
backend/app/utils/: task_tree.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_invitations.py  test_projects.py  test_tasks.py
docs/: README.md  api.md  architecture.md  database.md  deployment.md  documentation-guidelines.md  domain-model.md  overview.md  tutorial.md
docs/adr/: 0001-use-github-markdown-mermaid-for-design-docs.md  README.md
frontend/: .env.demo.example  .env.example  .gitignore  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/demo/: record-demo.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: usePersonalTasks.ts  useProjects.ts  useTaskForm.ts
frontend/src/lib/: announcements.ts  api.ts  currentUser.ts  demoData.ts  formatDate.ts  taskTree.ts
frontend/src/pages/: DashboardPage.tsx  DemoPage.tsx  InvitationAcceptPage.tsx  LandingPage.tsx  LoginPage.tsx  (+8 more)
(+31 files in other folders)
